--- a/config-dev.yml
+++ b/config-dev.yml
@@ -1,5 +1,5 @@
 eureka:
   client:
     service-url:
-      defaultZone:  http://localhost:7001/eureka
+      defaultZone:  http://localhost:7001/eureka,http://eureka7002.com:7002/eureka
 
